[gd_scene load_steps=15 format=3 uid="uid://b66xih2k0rs5y"]

[ext_resource type="Script" path="res://Scenes/fase2.gd" id="1_66cyl"]
[ext_resource type="Texture2D" uid="uid://h0y5xssjwgjb" path="res://Assets/Fase 2/kitchen.jpeg" id="2_n10wf"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Font/font/andina.ttf" id="3_6fxfo"]
[ext_resource type="Texture2D" uid="uid://hbfwiq3e50ri" path="res://Assets/Fase 2/condensed milk.png" id="4_34aiy"]
[ext_resource type="Texture2D" uid="uid://xexxg46sap25" path="res://Assets/Fase 2/condensed_milk_opacity.png" id="5_7xehn"]
[ext_resource type="Texture2D" uid="uid://dsqhyp6s21vab" path="res://Assets/Fase 2/chocolate powder.png" id="6_ko85d"]
[ext_resource type="Texture2D" uid="uid://cebcfl6cjqjc8" path="res://Assets/Fase 2/chocolate_powder_opacity.png" id="7_3enrn"]
[ext_resource type="Texture2D" uid="uid://143scykalxr8" path="res://Assets/Fase 2/butter.png" id="8_bpq3k"]
[ext_resource type="Texture2D" uid="uid://c1wbpklyfk0xe" path="res://Assets/Fase 2/butter_opacity.png" id="9_fd6p5"]
[ext_resource type="Texture2D" uid="uid://bm0qg5tg60thw" path="res://Assets/Fase 2/sugar.png" id="10_e2jmg"]
[ext_resource type="Texture2D" uid="uid://27kkkxlcfhxm" path="res://Assets/Fase 2/sugar_opacity.png" id="11_mwlqj"]
[ext_resource type="Texture2D" uid="uid://dxwysngt7whrw" path="res://Assets/Fase 2/powdered milk.png" id="12_616xh"]
[ext_resource type="AudioStream" uid="uid://b65l24s215my8" path="res://Assets/Sons/troca de item (abaixar volume).mp3" id="13_n0g6k"]
[ext_resource type="AudioStream" uid="uid://dbkuwwe4fiq65" path="res://Assets/Sons/voicy-wrong-answer-sound-effect-8-bit_HBMUyIea.mp3" id="14_37omy"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_66cyl")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_n10wf")
expand_mode = 1

[node name="Pergunta" type="Label" parent="."]
offset_left = 7.0
offset_top = 47.0
offset_right = 1144.0
offset_bottom = 239.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_6fxfo")
theme_override_font_sizes/font_size = 50
text = "Clique no objeto com nome:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" type="Label" parent="."]
offset_left = 10.0
offset_top = 107.0
offset_right = 1147.0
offset_bottom = 299.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_6fxfo")
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="Condensed Milk" type="TextureButton" parent="."]
offset_left = 26.0
offset_top = 283.0
offset_right = 526.0
offset_bottom = 783.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_34aiy")
texture_pressed = ExtResource("4_34aiy")
texture_hover = ExtResource("4_34aiy")
texture_disabled = ExtResource("5_7xehn")
texture_focused = ExtResource("4_34aiy")
stretch_mode = 0

[node name="Chocolate Powder" type="TextureButton" parent="."]
offset_left = 257.0
offset_top = 333.0
offset_right = 422.0
offset_bottom = 498.0
texture_normal = ExtResource("6_ko85d")
texture_pressed = ExtResource("6_ko85d")
texture_hover = ExtResource("6_ko85d")
texture_disabled = ExtResource("7_3enrn")
texture_focused = ExtResource("6_ko85d")
stretch_mode = 0

[node name="Butter" type="TextureButton" parent="."]
offset_left = 449.0
offset_top = 309.0
offset_right = 709.0
offset_bottom = 533.0
texture_normal = ExtResource("8_bpq3k")
texture_pressed = ExtResource("8_bpq3k")
texture_hover = ExtResource("8_bpq3k")
texture_disabled = ExtResource("9_fd6p5")
texture_focused = ExtResource("8_bpq3k")
stretch_mode = 0

[node name="Sugar" type="TextureButton" parent="."]
offset_left = 711.0
offset_top = 302.0
offset_right = 911.0
offset_bottom = 502.0
texture_normal = ExtResource("10_e2jmg")
texture_pressed = ExtResource("10_e2jmg")
texture_hover = ExtResource("10_e2jmg")
texture_disabled = ExtResource("11_mwlqj")
texture_focused = ExtResource("10_e2jmg")
stretch_mode = 0

[node name="Powdered Milk" type="TextureButton" parent="."]
offset_left = 905.0
offset_top = 325.0
offset_right = 1070.0
offset_bottom = 490.0
texture_normal = ExtResource("12_616xh")
texture_pressed = ExtResource("12_616xh")
texture_hover = ExtResource("12_616xh")
texture_disabled = ExtResource("12_616xh")
texture_focused = ExtResource("12_616xh")
stretch_mode = 0

[node name="Resposta" type="Label" parent="."]
offset_left = 389.0
offset_top = 546.0
offset_right = 740.0
offset_bottom = 609.0
theme_override_fonts/font = ExtResource("3_6fxfo")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="Vidas" type="Label" parent="."]
offset_left = 964.0
offset_top = 18.0
offset_right = 1071.0
offset_bottom = 80.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_6fxfo")
theme_override_font_sizes/font_size = 30
text = "VIDAS: 3"

[node name="Right Answer Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_n0g6k")

[node name="Wrong Answer Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_37omy")

[connection signal="pressed" from="Condensed Milk" to="." method="_on_condensed_milk_pressed"]
[connection signal="pressed" from="Chocolate Powder" to="." method="_on_chocolate_powder_pressed"]
[connection signal="pressed" from="Butter" to="." method="_on_butter_pressed"]
[connection signal="pressed" from="Sugar" to="." method="_on_sugar_pressed"]
[connection signal="pressed" from="Powdered Milk" to="." method="_on_powdered_milk_pressed"]
